<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login_sopt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_login_sopt"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_id"
        android:textSize="25sp"
        app:layout_constraintRight_toLeftOf="@id/tv_login_sopt"
        app:layout_constraintTop_toBottomOf="@id/tv_login_sopt" />

    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/et_id"
        android:inputType="text"
        android:paddingVertical="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_login_id"
        app:layout_constraintTop_toBottomOf="@id/tv_login_id" />

    <TextView
        android:id="@+id/tv_login_ps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_password"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="@id/et_login_id"
        app:layout_constraintTop_toBottomOf="@id/et_login_id" />

    <EditText
        android:id="@+id/et_login_ps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/et_ps"
        android:inputType="textPassword"
        android:paddingVertical="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_login_ps"
        app:layout_constraintTop_toBottomOf="@id/tv_login_ps" />


    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/solid_btn"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_login_ps" />

    <Button
        android:id="@+id/btn_login_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/solid_btn"
        android:text="@string/btn_sign"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_login_login" />

</android.support.constraint.ConstraintLayout>