<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_mypage_profile"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="35dp"
        android:scaleType="fitXY"
        android:src="@drawable/yeonjeen"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/solid_img"/>

    <TextView
        android:id="@+id/tv_mypage_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/iv_mypage_profile"
        app:layout_constraintTop_toTopOf="@id/iv_mypage_profile" />

    <TextView
        android:id="@+id/tv_mypage_selfcription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_mypage_selfcription"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/iv_mypage_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_nickname" />

    <TextView
        android:id="@+id/tv_mypage_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_id"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/iv_mypage_profile"
        app:layout_constraintTop_toBottomOf="@id/iv_mypage_profile" />

    <TextView
        android:id="@+id/tv_mypage_editid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_mypage_id"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_id" />

    <TextView
        android:id="@+id/tv_mypage_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_adress"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv_mypage_editid"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_editid" />

    <TextView
        android:id="@+id/tv_mypage_editadress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_mypage_adress"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_adress" />



</androidx.constraintlayout.widget.ConstraintLayout>